# summer-movie-scratchpad

./: CMakeLists.txt  scratchpad.cxx
shaders/: frag_light_fragment.fs  frag_light_ggx.fs  frag_light_vertex.vs
